Stream spacing fixed

--- a/react-front-end/src/styles/partials/_stream.scss
+++ b/react-front-end/src/styles/partials/_stream.scss
@@ -41,7 +41,7 @@
 
   &__chat {
     width: 300px;
-    height: 100%;
+    height: 100.4%;
 
     & .chat {
       position: relative;
