--- a/react-front-end/src/styles/styles.css
+++ b/react-front-end/src/styles/styles.css
@@ -824,7 +824,7 @@ img.bg {
       border: none; }
   .stream__chat {
     width: 300px;
-    height: 100%; }
+    height: 100.4%; }
     .stream__chat .chat {
       position: relative;
       height: 100%;
